<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ViaMarketApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_market_time_line">MarketTimeLine</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_item_display_list">ItemDisplayList</string>
    <string name="search">your research</string>
    <string name="searchButton">Look for my item !</string>
    <string name="searchCenter">Research Center </string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signup">Sign Up</string>
    <string name="UserNameHint">Username</string>
    <string name="LastNameHint">Last name</string>
    <string name="firstNameHint">First name</string>
    <string name="pwdHint">Password</string>
    <string name="rPwdHint">Retype password</string>
    <string name="signMeUp">Sign me up </string>
    <string name="gotoSignup">Sign Up</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="confirmationText">Welcome to VIA Market</string>
    <string name="emailSentText">An email has been sent to the address you provided, please make sure to validate your account before attempting the login. VIA Market Team</string>
    <string name="VIAlogo">via university logo</string>
    <string name="gotologin">Go to the login page</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile">Profile</string>
    <string name="upload">Upload a new item</string>
    <string name="title">Name of your item</string>
    <string name="description">Description</string>
    <string name="uploadPic"> Upload pictures</string>
    <string name="button">Publish my item</string>
    <string name="gotouploadphoto">Upload pictures</string>
    <string name="price">Price</string>
    <string name="title_activity_choose_pictures">ChoosePictures</string>
    <string name="maxpic"> 3 pictures maximum</string>
    <string name="titleuploadpic"> Upload your pictures</string>
    <string name="title_activity_sum_up_item">SumUpItem</string>
    <string name="sumup">Sum up</string>
    <string name="titleofitem">Name</string>
    <string name="titleofitemupload"></string>
    <string name="descriptiontitle">Description</string>
    <string name="descriptionItemToUpload"></string>
    <string name="pricetitle">Price</string>
    <string name="uploaddef">Upload</string>
    <string name="changeItem">Change the pictures</string>
    <string name="priceItemToUpload"></string>
    <string name="next">Next</string>

    <string-array name="categories">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="cat">Category</string>
    <string name="catItem"></string>
    <string name="title_activity_show_item_to_sell">ShowItemToSell</string>
    <string name="ItemTitle"></string>
    <string name="Date">Date of upload :</string>
    <string name="PriceItemToSell">Price : </string>
    <string name="uploadBy">Seller : </string>
    <string name="descriptionItemToSell">Description :</string>
    <string name="AddToMyFavoriteAnnounces">Add to my item list</string>
    <string name="contactSeller">Contact the seller</string>
    <string name="title_activity_profile_details">ProfileDetails</string>
    <string name="title_activity_display_bitmapped">DisplayBitmapped</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="title_activity_image_detail_fragment">ImageDetailFragment</string>
    <string name="imageview_description"> desxription</string>
    <string name="title_activity_my_dialog_fragment">MyDialogFragment</string>
    <string name="frontPicture">Front picture</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_abs_list_view">AbsListViewActivity</string>
    <string name="title_activity_image_pager">ImagePagerActivity</string>
    <string name="descr_image">ImagePagerActivity</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_on_going_sales">OnGoingSales</string>
    <string name="title_activity_sold_items">SoldItems</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="editProf">Edit your profile</string>

</resources>
